--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ nav .list li {
 /* Section Comman css */
 .Section_comman {
     width: 100%;
-    height: 100vh;
-    background-size: 80% 100%;
+    height: 40rem;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: bottom;
     display: flex;
@@ -116,8 +116,8 @@ nav .list li {
 }
 
 .Section_1 .heading {
-    padding-top: 3.8rem;
-    font-size: 3.8rem;
+    padding-top: 5rem;
+    font-size: 2rem;
     line-height: 1.125;
     font-weight: 600;
     letter-spacing: .004em;
@@ -125,7 +125,7 @@ nav .list li {
 }
 
 .Section_1 .subHeading {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-top: 7px;
     line-height: 1.21053;
     font-weight: 400;
@@ -149,7 +149,7 @@ nav .list li {
 .Section_1 .section1-links .section1-link,
 .Section_1 .section1-links .section1-link a {
     font-family: "SF Pro Icons";
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: var(--links);
     margin-right: 6px;
 }
@@ -344,51 +344,5 @@ nav .list li {
         transform: rotate(90deg);
         transition: top 0.1s cubic-bezier(0.3, 0, 0.6, 0.3) 0.16s,
             transform 0.13s cubic-bezier(0.215, 0.61, 0.35, 1) 0.25s;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .Section_1 {
-        height: calc(70vh - 44px);
-        background-size: 100vw 85%;
-    }
-
-    .Section_1 .heading {
-        padding-top: 4rem;
-        font-size: 2.8rem;
-    }
-
-    .section2 .heading {
-        padding-top: 2rem;
-    }
-
-    .Section_1 .section1-links .section1-link,
-    .Section_1 .section1-links .section1-link a {
-        font-size: 1rem;
-    }
-}
-
-@media screen and (max-width: 350px) {
-    .Section_1 .heading {
-        font-size: 2rem;
-    }
-
-    .Section_1 .subHeading {
-        font-size: 1rem;
-    }
-
-    .Section_1 .section1-links .section1-link,
-    .Section_1 .section1-links .section1-link a {
-        font-size: 0.8rem;
-    }
-
-    .Section_1 {
-        height: calc(65vh - 44px);
-    }
-}
-
-@media screen and (max-width: 300px) {
-    body {
-        display: none;
     }
 }
